--- a/py-love/pyTeste.ipynb
+++ b/py-love/pyTeste.ipynb
@@ -26,20 +26,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "13"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = 13\n",
     "a"
@@ -61,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,6 +75,15 @@
     "---\n",
     "Tem algumas variações tbm.\n",
     "tem saidas super complexas tbm como mathplot (pra graficos) e a do pandas (para tabelas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Olá, Leitor!\")"
    ]
   }
  ],
