--- a/py-love/pyGrafos.ipynb
+++ b/py-love/pyGrafos.ipynb
@@ -27,7 +27,20 @@
     "\n",
     "- Ponderado\n",
     "    tem uma distância quantitativa.\n",
-    "    > alguns, \"De 3 para 1\" é somente true ou false. outros são distâncias como \"De 3 para 1\" = 53"
+    "    > alguns, \"De 3 para 1\" é somente true ou false. outros são distâncias como \"De 3 para 1\" = 53\n",
+    "\n",
+    "Exemplo:\n",
+    "\n",
+    "<img src = https://raw.githubusercontent.com/Vjfrib/Py-Lover/c1fb5f4ef3b96b0336c7898eb47ad15e75303867/assets/Grafo0.drawio.svg>\n",
+    "\n",
+    "<!-- \n",
+    "![../assets/arestas.png]\n",
+    "\n",
+    "![Descrição Opcional](../assets/arestas.png)\n",
+    "\n",
+    "%%%%%<img src=\"https://raw.githubusercontent.com/Vjfrib/Py-Lover/c1fb5f4ef3b96b0336c7898eb47ad15e75303867/assets/Grafo0.drawio.svg\" alt=\"Descrição Opcional\">\n",
+    "%%%%%\n",
+    "-->\n"
    ]
   }
  ],
